--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "globals": "^16.4.0",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.16",
     "vite": "npm:rolldown-vite@7.1.14",
     "vitest": "^4.0.6"
