--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
 
     steps:
       - name: Checkout code
@@ -20,8 +21,12 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
+      # Fix npm + Rollup native binding issue
+      - name: Clean npm cache
+        run: npm cache clean --force
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --include=optional
 
       - name: Run unit and integration tests
         run: npm test -- --run
