--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
+    env:
+      ROLLUP_SKIP_NATIVE: true
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,12 +24,11 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      # Fix npm + Rollup native binding issue
       - name: Clean npm cache
         run: npm cache clean --force
 
       - name: Install dependencies
-        run: npm ci --include=optional
+        run: npm ci
 
       - name: Run unit and integration tests
         run: npm test -- --run
