--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
-    env:
-      ROLLUP_SKIP_NATIVE: true
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,11 +21,15 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
+      # IMPORTANT: must be set before npm install
+      - name: Disable Rollup native bindings
+        run: echo "ROLLUP_SKIP_NATIVE=true" >> $GITHUB_ENV
+
       - name: Clean npm cache
         run: npm cache clean --force
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --include=optional
 
       - name: Run unit and integration tests
         run: npm test -- --run
