--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,56 +27,17 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run unit and integration tests
-      run: npm test
+    - name: Run unit tests (excluding integration tests)
+      run: npx vitest run --exclude 'tests/integration/**'
       
-    - name: Run tests with coverage
-      run: npm run test:coverage
-      
-    - name: Upload coverage reports
-      uses: codecov/codecov-action@v4
+    - name: Generate coverage report
+      run: npx vitest run --coverage --exclude 'tests/integration/**'
       if: matrix.node-version == '20.x'
-      with:
-        files: ./coverage/coverage-final.json
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
-      continue-on-error: true
-    
+      
     - name: Archive coverage report
       uses: actions/upload-artifact@v4
       if: matrix.node-version == '20.x'
       with:
         name: coverage-report
         path: coverage/
-        retention-days: 30
-
-  e2e-test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Install Playwright browsers
-      run: npx playwright install --with-deps chromium
-      
-    - name: Run E2E tests
-      run: npm run test:e2e
-      
-    - name: Upload E2E test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
         retention-days: 30
