--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,18 +10,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 20.x
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20.x'
         cache: 'npm'
     
     - name: Install dependencies
@@ -32,11 +28,9 @@ jobs:
       
     - name: Generate coverage report
       run: npx vitest run --coverage --exclude 'tests/integration/**'
-      if: matrix.node-version == '20.x'
       
     - name: Archive coverage report
       uses: actions/upload-artifact@v4
-      if: matrix.node-version == '20.x'
       with:
         name: coverage-report
         path: coverage/
