Optimize CI to run tests with coverage in single step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run unit tests (excluding integration tests)
-      run: npx vitest run --exclude 'tests/integration/**'
-      
-    - name: Generate coverage report
+    - name: Run tests with coverage (excluding integration tests)
       run: npx vitest run --coverage --exclude 'tests/integration/**'
       
     - name: Archive coverage report
